# PulsePoint-Alerts

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: development-checklist.md  installation-linux.md  installation-macos.md  installation-windows.md  troubleshooting.md
examples/: config.example.json
installers/linux/: install.sh
installers/macos/: install.sh  start.sh
installers/windows/: create_shortcuts.ps1  install.bat  start.bat
scripts/: check_docs_updated.ps1  install_git_hooks.ps1
src/pulsepoint_alerts/: __init__.py  __main__.py  alerting.py  app.py  autostart.py  config.py  keepawake.py  monitor.py  runtime.py
tests/: test_ack_button_ui.py  test_alert_me_refresh_timing.py  test_alert_profiles.py  test_app_helpers.py  test_autostart.py  test_code_documentation.py  test_config.py  test_dashboard_render.py  test_debug_snapshot_ui.py  test_debug_snapshots.py  test_health_display.py  test_missing_active_preserves_baseline.py  test_monitor_parser.py  test_pushover_ack_bridge.py  test_runtime_heartbeat.py  test_unit_list_change_baseline.py
