[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsepoint-alerts"
version = "0.1.0-alpha.1"
description = "Local backup alert monitor for PulsePoint Respond Web unit activity"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cheddar SunRae Logistics Inc." }
]
keywords = ["pulsepoint", "ems", "fire", "alerts", "pushover", "ntfy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Flask",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "Flask>=3.0",
  "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
pulsepoint-alerts = "pulsepoint_alerts.__main__:main"

[tool.setuptools.package-data]
pulsepoint_alerts = ["templates/*.html", "static/*"]
